2002-07-01  H.J. Lu  <hjl@gnu.org>

	* elf/circleload1.c (load_dso): Call "circlemod1" and check
	return value.

	* elf/circlemod1.c (circlemod1): Return int.
	* elf/circlemod2.c (circlemod2): Likewise.
	* elf/circlemod2a.c (circlemod2): Likewise.
	* elf/circlemod3.c (circlemod3): Likewise.
	(circlemod3a): A new function.

2002-07-16  Ulrich Drepper  <drepper@redhat.com>

	* catgets/tst-catgets.c (main): Don't expect results for
	untranslated messages.

	* glibcbug.in: Fix little typo.  Remove STDIO.

	* config.h.in: Fail if __FAST_MATH__ is defined.
	* math/Makefile (CPPFLAGS-test-ifloat.c): Also define TEST_FAST_MATH.
	(CPPFLAGS-test-idouble.c): Likewise.
	(CPPFLAGS-test-ildouble.c): Likewise.

2002-07-15  Ulrich Drepper  <drepper@redhat.com>

	* intl/tst-gettext.sh: Pass -f option to msgfmt.
	* intl/tst-gettext.c: Correctly handle untranslated messages in
	positive tests.

	* po/de.po: Update from translation team.

2002-07-02  H.J. Lu  <hjl@gnu.org>

	* sysdeps/mips/atomicity.h: Don't include <sgidefs.h>.  Always
	use ll/sc.
	* sysdeps/unix/sysv/linux/mips/sys/tas.h: Likewise.

	* sysdeps/unix/sysv/linux/configure.in: Set arch_minimum_kernel
	to 2.4.0 for mips.

2002-07-15  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): If loaded object uses
	TLS fail if USE_TLS is not defined.

	* libio/wfileops.c (_IO_wfile_seekoff): Reposition wide pointers
	and adjust state for seek position.  [PR libc/4070]
	* libio/Makefile (tests): Add bug-rewind.
	* libio/bug-rewind.c: New file.

2002-07-12  Philip Blundell  <philb@gnu.org>

	* sysdeps/generic/backtrace.c (FIRST_FRAME_POINTER): New macro.
	(__backtrace): Use it.
	* sysdeps/arm/frame.h (FIRST_FRAME_POINTER): Define.  [PR libc/2632]

2002-07-12  Philip Blundell  <philb@gnu.org>

	* sysdeps/arm/dl-machine.h (elf_machine_rel): Don't handle
	R_ARM_RELATIVE if RTLD_BOOTSTRAP and HAVE_Z_COMBRELOC.  Only check
	for rtld map if neither RTLD_BOOTSTRAP nor HAVE_Z_COMBRELOC is defined.